Mon May 29 15:41:10 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* symtab.h (make_cleanup_free_search_symbols): Add declaration.
	* symtab.c (make_cleanup_free_search_symbols,
 	do_free_search_symbols_cleanup): New functions.
	(search_symbols, symtab_symbol_info, rbreak_command): Update.
	(search_symbols): Pass ``sr'', and not its address, to
 	make_cleanup_free_search_symbols.

2000-05-28  Kevin Buettner  <kevinb@redhat.com>

	* config/nm-linux.h (GDB_GREGSET_T, GDB_FPREGSET_T): Fix typos.

2000-05-27  Kevin Buettner  <kevinb@redhat.com>

	* abug-rom.c, alpha-nat.c, alpha-tdep.c, annotate.c,
	annotate.h, arc-tdep.c, ax-gdb.c, ax-gdb.h, ax-general.c,
	ax.h, breakpoint.c, breakpoint.h, c-exp.y, c-lang.c, c-lang.h,
	call-cmds.h, ch-exp.c, ch-lang.c, ch-lang.h, cli-out.c,
	coff-solib.h, coffread.c, command.c, command.h, complaints.c,
	complaints.h, config/a29k/tm-a29k.h, config/a29k/tm-vx29k.h,
	config/alpha/nm-linux.h, config/alpha/nm-osf.h,
	config/alpha/nm-osf2.h, config/alpha/tm-alpha.h,
	config/alpha/tm-alphalinux.h, config/arc/tm-arc.h,
	config/arm/tm-embed.h, config/d30v/tm-d30v.h,
	config/fr30/tm-fr30.h, config/h8300/tm-h8300.h,
	config/h8500/tm-h8500.h, config/i386/nm-i386bsd.h,
	config/i386/nm-i386sco.h, config/i386/nm-i386sol2.h,
	config/i386/nm-i386v.h, config/i386/nm-linux.h,
	config/i386/nm-nbsd.h, config/i386/nm-ptx4.h,
	config/i386/nm-symmetry.h, config/i386/tm-cygwin.h,
	config/i386/tm-i386.h, config/i386/tm-i386nw.h,
	config/i386/tm-i386sol2.h, config/i386/tm-i386v.h,
	config/i386/tm-i386v4.h, config/i386/tm-nbsd.h,
	config/i386/tm-ptx.h, config/i386/tm-sun386.h,
	config/i960/tm-mon960.h, config/i960/tm-nindy960.h,
	config/m32r/tm-m32r.h, config/m68k/nm-dpx2.h,
	config/m68k/nm-linux.h, config/m68k/tm-cisco.h,
	config/m68k/tm-delta68.h, config/m68k/tm-es1800.h,
	config/m68k/tm-isi.h, config/m68k/tm-linux.h,
	config/m68k/tm-m68k.h, config/m68k/tm-m68kv4.h,
	config/m68k/tm-news.h, config/m68k/tm-sun3.h,